import express from 'express';
import { createServer } from 'http';
import cors from 'cors';
import path from 'path';
import { fileURLToPath } from 'url';
import crypto from 'crypto';

// Ğ˜Ğ¼Ğ¿Ğ¾Ñ€Ñ‚ Ğ¡Ğ“Ğ•ĞĞ•Ğ Ğ˜Ğ ĞĞ’ĞĞĞĞ«Ğ¥ protobuf Ñ„Ğ°Ğ¹Ğ»Ğ¾Ğ²
import { TunnelFrame, HttpRequest, HttpResponse, Registration, RegistrationResponse, FrameType, ClientType } from './proto/tunnel_pb.js';

const __filename = fileURLToPath(import.meta.url);
const __dirname = path.dirname(__filename);

const app = express();
const server = createServer(app);

// Ğ¥Ñ€Ğ°Ğ½Ğ¸Ğ»Ğ¸Ñ‰Ğ°
const clients = new Map(); // client_id -> {type, metadata}
const tunnels = new Map(); // tunnel_id -> {client_id, stats}
const streams = new Map(); // client_id -> EventEmitter stream

// Middleware
app.use(cors({ origin: true, credentials: true }));
app.use(express.json({ limit: '50mb' }));
app.use(express.urlencoded({ extended: true, limit: '50mb' }));
app.use(express.static('public'));

// ==================== gRPC-Web ÑĞ½Ğ´Ğ¿Ğ¾Ğ¸Ğ½Ñ‚Ñ‹ ====================

// gRPC-Web ÑÑ‚Ñ€Ğ¸Ğ¼ (Ğ¸Ğ¼Ğ¸Ñ‚Ğ°Ñ†Ğ¸Ñ Ñ‡ĞµÑ€ĞµĞ· Server-Sent Events)
app.get('/grpc/tunnel/stream', (req, res) => {
  const clientId = req.query.client_id || `client_${Date.now()}`;
  
  console.log(`ğŸ”— gRPC-Web stream started: ${clientId}`);
  
  res.writeHead(200, {
    'Content-Type': 'text/event-stream',
    'Cache-Control': 'no-cache',
    'Connection': 'keep-alive',
    'Access-Control-Allow-Origin': '*'
  });
  
  // Ğ¡Ğ¾Ğ·Ğ´Ğ°ĞµĞ¼ ÑÑ‚Ñ€Ğ¸Ğ¼ Ğ´Ğ»Ñ ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°
  const stream = {
    id: clientId,
    write: (data) => {
      res.write(`data: ${JSON.stringify(data)}\n\n`);
    },
    close: () => {
      res.end();
    }
  };
  
  streams.set(clientId, stream);
  
  // ĞÑ‚Ğ¿Ñ€Ğ°Ğ²Ğ»ÑĞµĞ¼ Ğ¿Ñ€Ğ¸Ğ²ĞµÑ‚ÑÑ‚Ğ²ĞµĞ½Ğ½Ğ¾Ğµ ÑĞ¾Ğ¾Ğ±Ñ‰ĞµĞ½Ğ¸Ğµ
  const welcomeFrame = new TunnelFrame({
    frame_id: `welcome_${Date.now()}`,
    type: FrameType.DATA,
    payload: Buffer.from(JSON.stringify({
      message: 'Connected to gRPC-Web tunnel',
      client_id: clientId,
      server_time: Date.now()
    })),
    timestamp: Date.now()
  });
  
  stream.write(welcomeFrame);
  
  // ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ° Ğ·Ğ°ĞºÑ€Ñ‹Ñ‚Ğ¸Ñ ÑĞ¾ĞµĞ´Ğ¸Ğ½ĞµĞ½Ğ¸Ñ
  req.on('close', () => {
    console.log(`ğŸ”Œ Stream closed: ${clientId}`);
    streams.delete(clientId);
    clients.delete(clientId);
  });
});

// gRPC-Web ÑƒĞ½Ğ°Ñ€Ğ½Ñ‹Ğµ Ğ²Ñ‹Ğ·Ğ¾Ğ²Ñ‹ (POST)
app.post('/grpc/tunnel.TunnelService/:method', async (req, res) => {
  const method = req.params.method;
  const contentType = req.headers['content-type'] || '';
  
  console.log(`ğŸ“¡ gRPC-Web call: ${method}`);
  
  try {
    let result;
    
    switch(method) {
      case 'Register':
        result = await handleRegister(req.body);
        break;
        
      case 'HttpProxy':
        result = await handleHttpProxy(req.body);
        break;
        
      default:
        throw new Error(`Unknown method: ${method}`);
    }
    
    // Ğ¤Ğ¾Ñ€Ğ¼Ğ°Ñ‚Ğ¸Ñ€ÑƒĞµĞ¼ Ğ¾Ñ‚Ğ²ĞµÑ‚ ĞºĞ°Ğº gRPC-Web
    if (contentType.includes('application/grpc-web-text')) {
      // Ğ”Ğ»Ñ Ñ€ĞµĞ°Ğ»ÑŒĞ½Ğ¾Ğ³Ğ¾ gRPC-Web (base64 encoded)
      res.setHeader('Content-Type', 'application/grpc-web-text+proto');
      res.setHeader('grpc-status', '0');
      res.send(result.serializeBinary());
    } else {
      // JSON fallback
      res.json({
        success: true,
        data: result,
        method: method
      });
    }
    
  } catch (error) {
    console.error(`âŒ gRPC-Web error (${method}):`, error);
    
    if (contentType.includes('application/grpc-web-text')) {
      res.setHeader('grpc-status', '13'); // INTERNAL
      res.setHeader('grpc-message', encodeURIComponent(error.message));
      res.end();
    } else {
      res.status(500).json({
        error: error.message,
        method: method
      });
    }
  }
});

// ==================== ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚Ñ‡Ğ¸ĞºĞ¸ gRPC ====================

async function handleRegister(data) {
  let registration;
  
  // ĞŸĞ°Ñ€ÑĞ¸Ğ¼ Ğ² Ğ·Ğ°Ğ²Ğ¸ÑĞ¸Ğ¼Ğ¾ÑÑ‚Ğ¸ Ğ¾Ñ‚ Ñ„Ğ¾Ñ€Ğ¼Ğ°Ñ‚Ğ°
  if (data.type === 'jsonrpc') {
    // JSON-RPC Ñ„Ğ¾Ñ€Ğ¼Ğ°Ñ‚
    registration = {
      client_id: data.params.client_id,
      client_type: data.params.client_type === 'browser' ? ClientType.BROWSER : ClientType.LAPTOP,
      capabilities: data.params.capabilities || [],
      local_app_url: data.params.local_app_url || ''
    };
  } else {
    // ĞŸÑ€ÑĞ¼Ğ¾Ğ¹ protobuf-like Ñ„Ğ¾Ñ€Ğ¼Ğ°Ñ‚
    registration = data;
  }
  
  const clientId = registration.client_id || `client_${Date.now()}`;
  const tunnelId = `tunnel_${Date.now()}_${crypto.randomBytes(4).toString('hex')}`;
  
  // Ğ¡Ğ¾Ñ…Ñ€Ğ°Ğ½ÑĞµĞ¼ ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°
  clients.set(clientId, {
    id: clientId,
    type: registration.client_type === ClientType.BROWSER ? 'browser' : 'laptop',
    connectedAt: new Date(),
    capabilities: registration.capabilities,
    tunnelId
  });
  
  // Ğ¡Ğ¾Ğ·Ğ´Ğ°ĞµĞ¼ Ñ‚ÑƒĞ½Ğ½ĞµĞ»ÑŒ Ğ´Ğ»Ñ laptop ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ¾Ğ²
  if (registration.client_type === ClientType.LAPTOP) {
    tunnels.set(tunnelId, {
      id: tunnelId,
      clientId,
      createdAt: new Date(),
      stats: { requests: 0, bytes: 0 }
    });
    
    console.log(`ğŸ’» Laptop registered: ${clientId} (tunnel: ${tunnelId})`);
  } else {
    console.log(`ğŸŒ Browser registered: ${clientId}`);
  }
  
  // Ğ’Ğ¾Ğ·Ğ²Ñ€Ğ°Ñ‰Ğ°ĞµĞ¼ Ğ¾Ñ‚Ğ²ĞµÑ‚
  return new RegistrationResponse({
    client_id: clientId,
    tunnel_id: tunnelId,
    server_version: '2.0.0',
    obfuscation_method: 'xor', // Ğ¸Ğ»Ğ¸ Ğ¸Ğ· ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³Ğ°
    server_time: Date.now()
  });
}

async function handleHttpProxy(data) {
  const request = data;
  
  console.log(`ğŸŒ HTTP Proxy: ${request.method} ${request.path}`);
  
  // ĞĞ°Ñ…Ğ¾Ğ´Ğ¸Ğ¼ Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ñ‹Ğ¹ laptop Ñ‚ÑƒĞ½Ğ½ĞµĞ»ÑŒ
  const tunnel = Array.from(tunnels.values()).find(t => {
    const client = clients.get(t.clientId);
    return client && client.type === 'laptop';
  });
  
  if (!tunnel) {
    throw new Error('No active laptop tunnel found');
  }
  
  const laptopClient = clients.get(tunnel.clientId);
  const stream = streams.get(laptopClient.id);
  
  if (!stream) {
    throw new Error('Laptop client not connected via stream');
  }
  
  // Ğ¡Ğ¾Ğ·Ğ´Ğ°ĞµĞ¼ HTTP Ğ·Ğ°Ğ¿Ñ€Ğ¾Ñ Ğ´Ğ»Ñ Ğ¿ĞµÑ€ĞµÑÑ‹Ğ»ĞºĞ¸
  const httpRequest = new HttpRequest({
    request_id: request.request_id || `req_${Date.now()}`,
    method: request.method,
    path: request.path,
    headers: request.headers || {},
    body: request.body ? Buffer.from(request.body) : Buffer.from(''),
    query: request.query || {}
  });
  
  // Ğ¡Ğ¾Ğ·Ğ´Ğ°ĞµĞ¼ Ñ‚ÑƒĞ½Ğ½ĞµĞ»ÑŒĞ½Ñ‹Ğ¹ ĞºĞ°Ğ´Ñ€
  const frame = new TunnelFrame({
    frame_id: `http_${Date.now()}`,
    type: FrameType.HTTP_REQUEST,
    payload: httpRequest.serializeBinary(),
    timestamp: Date.now(),
    metadata: {
      content_type: 'application/json',
      source: 'browser'
    }
  });
  
  // ĞÑ‚Ğ¿Ñ€Ğ°Ğ²Ğ»ÑĞµĞ¼ Ñ‡ĞµÑ€ĞµĞ· ÑÑ‚Ñ€Ğ¸Ğ¼
  stream.write(frame);
  
  // Ğ’ Ñ€ĞµĞ°Ğ»ÑŒĞ½Ğ¾ÑÑ‚Ğ¸ Ğ½ÑƒĞ¶Ğ½Ğ¾ Ğ¶Ğ´Ğ°Ñ‚ÑŒ Ğ¾Ñ‚Ğ²ĞµÑ‚Ğ° Ñ‡ĞµÑ€ĞµĞ· ÑÑ‚Ñ€Ğ¸Ğ¼
  // Ğ—Ğ´ĞµÑÑŒ ÑƒĞ¿Ñ€Ğ¾Ñ‰ĞµĞ½Ğ½Ğ¾ Ğ²Ğ¾Ğ·Ğ²Ñ€Ğ°Ñ‰Ğ°ĞµĞ¼ Ğ·Ğ°Ğ³Ğ»ÑƒÑˆĞºÑƒ
  return new HttpResponse({
    request_id: httpRequest.request_id,
    status: 200,
    headers: { 'content-type': 'application/json' },
    body: Buffer.from(JSON.stringify({
      message: 'Request forwarded through tunnel',
      tunnel_id: tunnel.id,
      timestamp: Date.now()
    }))
  });
}

// ==================== HTTP Ğ¼Ğ°Ñ€ÑˆÑ€ÑƒÑ‚Ñ‹ (Ğ´Ğ»Ñ ÑĞ¾Ğ²Ğ¼ĞµÑÑ‚Ğ¸Ğ¼Ğ¾ÑÑ‚Ğ¸) ====================

app.get('/', (req, res) => {
  res.sendFile(path.join(__dirname, 'public', 'index.html'));
});

app.get('/status', (req, res) => {
  res.json({
    status: 'ok',
    clients: clients.size,
    tunnels: tunnels.size,
    streams: streams.size,
    timestamp: new Date().toISOString()
  });
});

app.get('/health', (req, res) => {
  res.json({
    status: 'ok',
    version: '2.0.0',
    grpc_web: true,
    timestamp: new Date().toISOString()
  });
});

// HTTP Ğ¿Ñ€Ğ¾ĞºÑĞ¸ Ğ´Ğ»Ñ Ğ¾Ğ±Ñ€Ğ°Ñ‚Ğ½Ğ¾Ğ¹ ÑĞ¾Ğ²Ğ¼ĞµÑÑ‚Ğ¸Ğ¼Ğ¾ÑÑ‚Ğ¸
app.all('/proxy/*', async (req, res) => {
  const targetPath = req.params[0] || '';
  
  // ĞšĞ¾Ğ½Ğ²ĞµÑ€Ñ‚Ğ¸Ñ€ÑƒĞµĞ¼ Ğ² gRPC-Web Ğ·Ğ°Ğ¿Ñ€Ğ¾Ñ
  const httpRequest = {
    request_id: `http_${Date.now()}`,
    method: req.method,
    path: '/' + targetPath,
    headers: { ...req.headers },
    query: req.query,
    body: req.body ? JSON.stringify(req.body) : null
  };
  
  try {
    const response = await handleHttpProxy(httpRequest);
    
    // Ğ£ÑÑ‚Ğ°Ğ½Ğ°Ğ²Ğ»Ğ¸Ğ²Ğ°ĞµĞ¼ Ğ·Ğ°Ğ³Ğ¾Ğ»Ğ¾Ğ²ĞºĞ¸
    if (response.headers) {
      Object.entries(response.headers).forEach(([key, value]) => {
        res.setHeader(key, value);
      });
    }
    
    res.status(response.status || 200);
    
    if (response.body && response.body.length > 0) {
      res.send(response.body);
    } else {
      res.end();
    }
    
  } catch (error) {
    console.error('âŒ Proxy error:', error);
    res.status(502).json({
      error: 'Tunnel proxy failed',
      message: error.message
    });
  }
});

// ==================== Ğ—Ğ°Ğ¿ÑƒÑĞº ÑĞµÑ€Ğ²ĞµÑ€Ğ° ====================

const PORT = process.env.PORT || 3000;
server.listen(PORT, () => {
  console.log(`
ğŸš€ Stealth gRPC Tunnel Server
ğŸ“¡ Port: ${PORT}
ğŸŒ Endpoints:
   http://localhost:${PORT}/                    - Main page
   http://localhost:${PORT}/status              - Status
   http://localhost:${PORT}/health              - Health check
   http://localhost:${PORT}/grpc/tunnel/stream  - gRPC-Web stream (SSE)
   http://localhost:${PORT}/grpc/*              - gRPC-Web calls
   http://localhost:${PORT}/proxy/*             - HTTP proxy (legacy)
   
ğŸ”’ Features:
   âœ… gRPC-Web over HTTP/1.1
   âœ… Server-Sent Events for streaming
   âœ… No protoc required at runtime
   âœ… Render.com compatible
  `);
});
