import grpc from '@grpc/grpc-js';
import protoLoader from '@grpc/proto-loader';
import { ObfuscationRotator } from '../obfuscation/rotator.js';
import { DataMasker } from '../utils/masking.js';
import path from 'path';
import { fileURLToPath } from 'url';

const __dirname = path.dirname(fileURLToPath(import.meta.url));

// –ó–∞–≥—Ä—É–∑–∫–∞ protobuf
const PROTO_PATH = path.join(__dirname, '../proto/tunnel.proto');
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

const tunnelProto = grpc.loadPackageDefinition(packageDefinition).tunnel;

// –°–æ—Å—Ç–æ—è–Ω–∏–µ —Å–µ—Ä–≤–µ—Ä–∞
const clients = new Map(); // client_id -> {type, stream, metadata}
const tunnels = new Map(); // tunnel_id -> {client_id, created_at, stats}

class TunnelServer {
  constructor() {
    this.obfuscator = new ObfuscationRotator();
    this.masker = new DataMasker();
    this.server = new grpc.Server();
  }
  
  start(port = 50051) {
    this.server.addService(tunnelProto.TunnelService.service, {
      tunnelStream: this.handleTunnelStream.bind(this),
      httpProxy: this.handleHttpProxy.bind(this),
      register: this.handleRegister.bind(this)
    });
    
    this.server.bindAsync(
      `0.0.0.0:${port}`,
      grpc.ServerCredentials.createInsecure(),
      (error, port) => {
        if (error) {
          console.error('‚ùå gRPC server failed to start:', error);
          return;
        }
        
        console.log(`‚úÖ gRPC server listening on port ${port}`);
        this.server.start();
      }
    );
  }
  
  // –û–±—Ä–∞–±–æ—Ç–∫–∞ –±–∏–¥–∏—Ä–µ–∫—Ü–∏–æ–Ω–∞–ª—å–Ω–æ–≥–æ —Å—Ç—Ä–∏–º–∞
  handleTunnelStream(call) {
    const clientId = `grpc_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;
    
    console.log(`üîó New gRPC stream connection: ${clientId}`);
    
    // –°–æ—Ö—Ä–∞–Ω—è–µ–º –∫–ª–∏–µ–Ω—Ç–∞
    clients.set(clientId, {
      type: 'laptop',
      stream: call,
      connectedAt: new Date(),
      lastActivity: Date.now()
    });
    
    // –û–±—Ä–∞–±–æ—Ç–∫–∞ –≤—Ö–æ–¥—è—â–∏—Ö —Å–æ–æ–±—â–µ–Ω–∏–π
    call.on('data', async (frame) => {
      try {
        await this.processFrame(frame, clientId, call);
        this.updateActivity(clientId);
      } catch (error) {
        console.error('‚ùå Frame processing error:', error);
        this.sendError(call, error.message, frame.frame_id);
      }
    });
    
    call.on('end', () => {
      console.log(`üîå gRPC stream ended: ${clientId}`);
      this.cleanupClient(clientId);
    });
    
    call.on('error', (error) => {
      console.error(`‚ùå gRPC stream error ${clientId}:`, error);
      this.cleanupClient(clientId);
    });
    
    // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–µ–Ω–Ω–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ
    this.sendWelcome(call, clientId);
  }
  
  // –û–±—Ä–∞–±–æ—Ç–∫–∞ HTTP –ø—Ä–æ–∫—Å–∏ –∑–∞–ø—Ä–æ—Å–æ–≤ (–¥–ª—è –±—Ä–∞—É–∑–µ—Ä–æ–≤ —á–µ—Ä–µ–∑ gRPC-Web)
  async handleHttpProxy(call, callback) {
    try {
      const request = call.request;
      console.log(`üì° HTTP Proxy: ${request.method} ${request.path}`);
      
      // –ù–∞—Ö–æ–¥–∏–º –∞–∫—Ç–∏–≤–Ω—ã–π —Ç—É–Ω–Ω–µ–ª—å
      const tunnel = this.findAvailableTunnel();
      
      if (!tunnel) {
        return callback(null, {
          request_id: request.request_id,
          status: 503,
          headers: { 'content-type': 'application/json' },
          body: Buffer.from(JSON.stringify({
            error: 'No tunnel available',
            message: 'Please start your local tunnel client'
          })).toString('base64')
        });
      }
      
      // –ü–µ—Ä–µ—Å—ã–ª–∞–µ–º –∑–∞–ø—Ä–æ—Å —á–µ—Ä–µ–∑ —Ç—É–Ω–Ω–µ–ª—å
      const response = await this.forwardThroughTunnel(tunnel.clientId, request);
      
      callback(null, response);
      
    } catch (error) {
      console.error('‚ùå HTTP Proxy error:', error);
      callback({
        code: grpc.status.INTERNAL,
        message: error.message
      });
    }
  }
  
  // –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è –∫–ª–∏–µ–Ω—Ç–∞
  handleRegister(call, callback) {
    try {
      const registration = call.request;
      const clientId = registration.client_id || `client_${Date.now()}`;
      
      console.log(`üìù Registration: ${clientId} (${registration.client_type})`);
      
      // –°–æ–∑–¥–∞–µ–º —Ç—É–Ω–Ω–µ–ª—å –¥–ª—è –∫–ª–∏–µ–Ω—Ç–∞
      const tunnelId = `tunnel_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;
      
      tunnels.set(tunnelId, {
        clientId,
        type: registration.client_type,
        createdAt: new Date(),
        stats: {
          requests_forwarded: 0,
          bytes_sent: 0,
          bytes_received: 0
        }
      });
      
      callback(null, {
        client_id: clientId,
        tunnel_id: tunnelId,
        server_version: '2.0.0',
        obfuscation_method: this.obfuscator.currentMethod,
        server_time: Date.now()
      });
      
    } catch (error) {
      console.error('‚ùå Registration error:', error);
      callback({
        code: grpc.status.INTERNAL,
        message: error.message
      });
    }
  }
  
  // –û–±—Ä–∞–±–æ—Ç–∫–∞ –∫–∞–¥—Ä–∞ —Ç—É–Ω–Ω–µ–ª—è
  async processFrame(frame, clientId, call) {
    // –î–µ–æ–±—Ñ—É—Å—Ü–∏—Ä—É–µ–º –¥–∞–Ω–Ω—ã–µ
    const payload = this.obfuscator.deobfuscate({
      method: frame.obfuscation_method,
      data: frame.payload,
      ...frame.metadata
    });
    
    // –†–∞–∑–±–∏—Ä–∞–µ–º –≤ –∑–∞–≤–∏—Å–∏–º–æ—Å—Ç–∏ –æ—Ç —Ç–∏–ø–∞
    switch(frame.type) {
      case 'REGISTER':
        await this.handleClientRegistration(payload, clientId, call);
        break;
        
      case 'HTTP_REQUEST':
        await this.handleHttpRequest(payload, clientId, call);
        break;
        
      case 'HTTP_RESPONSE':
        await this.handleHttpResponse(payload, clientId);
        break;
        
      case 'PING':
        this.sendPong(call, frame.frame_id);
        break;
        
      case 'DATA':
        console.log('üì¶ Data frame received:', payload.length, 'bytes');
        break;
        
      default:
        console.warn(`‚ö†Ô∏è Unknown frame type: ${frame.type}`);
    }
  }
  
  async handleHttpRequest(requestData, clientId, call) {
    const request = JSON.parse(requestData.toString());
    
    console.log(`üì§ Forwarding HTTP: ${request.method} ${request.path}`);
    
    // –ù–∞—Ö–æ–¥–∏–º —Ç—É–Ω–Ω–µ–ª—å
    const tunnel = Array.from(tunnels.values()).find(t => t.clientId === clientId);
    
    if (!tunnel) {
      throw new Error(`No tunnel found for client: ${clientId}`);
    }
    
    // –°–æ—Ö—Ä–∞–Ω—è–µ–º –∑–∞–ø—Ä–æ—Å –¥–ª—è –º–∞—Ä—à—Ä—É—Ç–∏–∑–∞—Ü–∏–∏ –æ—Ç–≤–µ—Ç–∞
    tunnel.pendingRequest = request;
    
    // –ó–¥–µ—Å—å –¥–æ–ª–∂–Ω–∞ –±—ã—Ç—å –ª–æ–≥–∏–∫–∞ –ø–µ—Ä–µ—Å—ã–ª–∫–∏ –Ω–∞ –≤–µ–±-–∫–ª–∏–µ–Ω—Ç
    // –ü–æ–∫–∞ –ø—Ä–æ—Å—Ç–æ –ª–æ–≥–∏—Ä—É–µ–º
    console.log(`üì§ Request from tunnel ${tunnel.id}:`, {
      method: request.method,
      path: request.path,
      hasBody: !!request.body
    });
  }
  
  async handleHttpResponse(responseData, clientId) {
    const response = JSON.parse(responseData.toString());
    
    console.log(`üì• HTTP Response: ${response.status}`);
    
    // –ù–∞—Ö–æ–¥–∏–º —Ç—É–Ω–Ω–µ–ª—å –∏ –º–∞—Ä—à—Ä—É—Ç–∏–∑–∏—Ä—É–µ–º –æ—Ç–≤–µ—Ç
    const tunnel = Array.from(tunnels.values()).find(t => t.clientId === clientId);
    
    if (tunnel && tunnel.pendingRequest) {
      // –û–±–Ω–æ–≤–ª—è–µ–º —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É
      tunnel.stats.requests_forwarded++;
      tunnel.stats.bytes_received += response.body ? Buffer.from(response.body, 'base64').length : 0;
      
      // –ó–¥–µ—Å—å –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å –∫–æ–¥ –æ—Ç–ø—Ä–∞–≤–∫–∏ –æ—Ç–≤–µ—Ç–∞ –≤–µ–±-–∫–ª–∏–µ–Ω—Ç—É
      console.log(`üì• Response for request ${tunnel.pendingRequest.id}:`, {
        status: response.status,
        headers: Object.keys(response.headers || {}).length
      });
      
      delete tunnel.pendingRequest;
    }
  }
  
  // –£—Ç–∏–ª–∏—Ç–Ω—ã–µ –º–µ—Ç–æ–¥—ã
  sendWelcome(call, clientId) {
    const frame = {
      frame_id: `welcome_${Date.now()}`,
      type: 'DATA',
      payload: Buffer.from(JSON.stringify({
        message: 'Welcome to Stealth Tunnel',
        client_id: clientId,
        server_time: Date.now(),
        obfuscation: this.obfuscator.currentMethod
      })),
      obfuscation_method: 'base64',
      mask_type: 'json',
      timestamp: Date.now()
    };
    
    call.write(frame);
  }
  
  sendPong(call, frameId) {
    const frame = {
      frame_id: `pong_${Date.now()}`,
      type: 'PONG',
      payload: Buffer.from(JSON.stringify({ original_frame: frameId })),
      obfuscation_method: 'base64',
      timestamp: Date.now()
    };
    
    call.write(frame);
  }
  
  sendError(call, message, frameId) {
    const frame = {
      frame_id: `error_${Date.now()}`,
      type: 'ERROR',
      payload: Buffer.from(JSON.stringify({
        error: message,
        original_frame: frameId
      })),
      obfuscation_method: 'base64',
      timestamp: Date.now()
    };
    
    call.write(frame);
  }
  
  findAvailableTunnel() {
    for (const [tunnelId, tunnel] of tunnels) {
      const client = clients.get(tunnel.clientId);
      if (client && client.type === 'laptop') {
        return { tunnelId, ...tunnel };
      }
    }
    return null;
  }
  
  async forwardThroughTunnel(clientId, httpRequest) {
    const client = clients.get(clientId);
    
    if (!client || !client.stream) {
      throw new Error('Tunnel client not available');
    }
    
    // –ü–æ–¥–≥–æ—Ç–∞–≤–ª–∏–≤–∞–µ–º –∫–∞–¥—Ä
    const requestData = JSON.stringify({
      id: httpRequest.request_id || `req_${Date.now()}`,
      method: httpRequest.method,
      path: httpRequest.path,
      headers: httpRequest.headers,
      query: httpRequest.query,
      body: httpRequest.body ? Buffer.from(httpRequest.body, 'base64').toString() : null
    });
    
    const obfuscated = this.obfuscator.obfuscate(requestData);
    
    const frame = {
      frame_id: `http_${Date.now()}`,
      type: 'HTTP_REQUEST',
      payload: Buffer.from(JSON.stringify(obfuscated)),
      obfuscation_method: obfuscated.method,
      mask_type: 'jsonrpc',
      timestamp: Date.now()
    };
    
    // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º —á–µ—Ä–µ–∑ gRPC —Å—Ç—Ä–∏–º
    client.stream.write(frame);
    
    // –ñ–¥–µ–º –æ—Ç–≤–µ—Ç–∞ (–≤ —Ä–µ–∞–ª—å–Ω–æ—Å—Ç–∏ –Ω—É–∂–µ–Ω –º–µ—Ö–∞–Ω–∏–∑–º –æ–∂–∏–¥–∞–Ω–∏—è)
    return new Promise((resolve) => {
      setTimeout(() => {
        // –ó–∞–≥–ª—É—à–∫–∞ - –≤ —Ä–µ–∞–ª—å–Ω–æ—Å—Ç–∏ –Ω—É–∂–Ω–æ –∂–¥–∞—Ç—å –æ—Ç–≤–µ—Ç —á–µ—Ä–µ–∑ —Ç—É–Ω–Ω–µ–ª—å
        resolve({
          request_id: httpRequest.request_id,
          status: 200,
          headers: { 'content-type': 'application/json' },
          body: Buffer.from(JSON.stringify({
            message: 'Response would come through tunnel'
          })).toString('base64')
        });
      }, 100);
    });
  }
  
  updateActivity(clientId) {
    const client = clients.get(clientId);
    if (client) {
      client.lastActivity = Date.now();
    }
  }
  
  cleanupClient(clientId) {
    const client = clients.get(clientId);
    if (client) {
      console.log(`üßπ Cleaning up client: ${clientId}`);
    }
    
    clients.delete(clientId);
    
    // –£–¥–∞–ª—è–µ–º —Å–≤—è–∑–∞–Ω–Ω—ã–µ —Ç—É–Ω–Ω–µ–ª–∏
    for (const [tunnelId, tunnel] of tunnels) {
      if (tunnel.clientId === clientId) {
        tunnels.delete(tunnelId);
        console.log(`üßπ Removed tunnel: ${tunnelId}`);
      }
    }
  }
}

export { TunnelServer };
