import express from 'express';
import { ObfuscationRotator } from '../obfuscation/rotator.js';
import { DataMasker } from '../utils/masking.js';

export class GrpcWebHandler {
  constructor(tunnelServer) {
    this.tunnelServer = tunnelServer;
    this.obfuscator = new ObfuscationRotator();
    this.masker = new DataMasker();
    this.router = express.Router();
    
    this.setupRoutes();
  }
  
  setupRoutes() {
    // gRPC-Web endpoint
    this.router.post('/tunnel.TunnelService/TunnelStream', this.handleTunnelStream.bind(this));
    this.router.post('/tunnel.TunnelService/HttpProxy', this.handleHttpProxy.bind(this));
    this.router.post('/tunnel.TunnelService/Register', this.handleRegister.bind(this));
    
    // –°–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç—å —Å–æ —Å—Ç–∞—Ä—ã–º API
    this.router.post('/api/tunnel', this.handleLegacyTunnel.bind(this));
  }
  
  // –û–±—Ä–∞–±–æ—Ç–∫–∞ gRPC-Web —Å—Ç—Ä–∏–º–∞
  async handleTunnelStream(req, res) {
    try {
      console.log('üì° gRPC-Web TunnelStream request');
      
      // –í —Ä–µ–∞–ª—å–Ω–æ—Å—Ç–∏ –∑–¥–µ—Å—å –æ–±—Ä–∞–±–æ—Ç–∫–∞ –±–∏–Ω–∞—Ä–Ω–æ–≥–æ gRPC-Web
      // –î–ª—è —É–ø—Ä–æ—â–µ–Ω–∏—è –∏—Å–ø–æ–ª—å–∑—É–µ–º JSON
      
      const contentType = req.headers['content-type'] || '';
      const isGrpcWeb = contentType.includes('application/grpc-web-text');
      
      if (isGrpcWeb) {
        // TODO: –†–µ–∞–ª—å–Ω–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ gRPC-Web –±–∏–Ω–∞—Ä–Ω–æ–≥–æ —Ñ–æ—Ä–º–∞—Ç–∞
        res.setHeader('Content-Type', 'application/grpc-web-text+proto');
        res.status(200).end();
      } else {
        // JSON fallback
        await this.handleJsonTunnel(req, res);
      }
      
    } catch (error) {
      console.error('‚ùå TunnelStream error:', error);
      res.status(500).json({ error: error.message });
    }
  }
  
  // HTTP –ø—Ä–æ–∫—Å–∏ —á–µ—Ä–µ–∑ gRPC-Web
  async handleHttpProxy(req, res) {
    try {
      const request = req.body;
      
      console.log(`üåê gRPC-Web HTTP Proxy: ${request.method || 'GET'} ${request.path || '/'}`);
      
      // –ú–∞—Å–∫–∏—Ä—É–µ–º –∏ –æ–±—Ñ—É—Å—Ü–∏—Ä—É–µ–º –∑–∞–ø—Ä–æ—Å
      const maskedRequest = this.masker.maskAsJsonRPC(
        Buffer.from(JSON.stringify(request))
      );
      
      const obfuscated = this.obfuscator.obfuscate(
        JSON.stringify(maskedRequest)
      );
      
      // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º —á–µ—Ä–µ–∑ gRPC —Å–µ—Ä–≤–µ—Ä
      // –í —Ä–µ–∞–ª—å–Ω–æ—Å—Ç–∏ —ç—Ç–æ –±—ã–ª –±—ã –≤—ã–∑–æ–≤ gRPC –º–µ—Ç–æ–¥–∞
      
      // –ü–æ–∫–∞ –∑–∞–≥–ª—É—à–∫–∞
      res.json({
        jsonrpc: '2.0',
        result: {
          request_id: request.request_id,
          status: 200,
          headers: { 'content-type': 'application/json' },
          body: Buffer.from(JSON.stringify({
            message: 'Proxy request processed',
            timestamp: Date.now()
          })).toString('base64')
        },
        id: maskedRequest.id
      });
      
    } catch (error) {
      console.error('‚ùå HTTP Proxy error:', error);
      res.status(500).json({ error: error.message });
    }
  }
  
  // –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è —á–µ—Ä–µ–∑ gRPC-Web
  async handleRegister(req, res) {
    try {
      const registration = req.body;
      
      console.log(`üìù gRPC-Web Registration: ${registration.client_type || 'unknown'}`);
      
      // –í —Ä–µ–∞–ª—å–Ω–æ—Å—Ç–∏ –≤—ã–∑—ã–≤–∞–µ–º gRPC –º–µ—Ç–æ–¥
      
      res.json({
        jsonrpc: '2.0',
        result: {
          client_id: registration.client_id || `web_${Date.now()}`,
          tunnel_id: `tunnel_web_${Date.now()}`,
          server_version: '2.0.0',
          obfuscation_method: this.obfuscator.currentMethod,
          server_time: Date.now()
        },
        id: registration.id || 1
      });
      
    } catch (error) {
      console.error('‚ùå Registration error:', error);
      res.status(500).json({ error: error.message });
    }
  }
  
  // –°–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç—å —Å–æ —Å—Ç–∞—Ä—ã–º API
  async handleLegacyTunnel(req, res) {
    try {
      const data = req.body;
      
      // –û–ø—Ä–µ–¥–µ–ª—è–µ–º —Ç–∏–ø –∑–∞–ø—Ä–æ—Å–∞
      if (data.jsonrpc === '2.0') {
        // JSON-RPC –∑–∞–ø—Ä–æ—Å
        await this.handleJsonRpc(data, res);
      } else if (data.query) {
        // GraphQL –∑–∞–ø—Ä–æ—Å
        await this.handleGraphQL(data, res);
      } else {
        // –ü—Ä—è–º–æ–π —Ç—É–Ω–Ω–µ–ª—å–Ω—ã–π –∑–∞–ø—Ä–æ—Å
        await this.handleDirectTunnel(data, res);
      }
      
    } catch (error) {
      console.error('‚ùå Legacy tunnel error:', error);
      res.status(500).json({ error: error.message });
    }
  }
  
  async handleJsonRpc(data, res) {
    const { method, params, id } = data;
    
    console.log(`üîÑ JSON-RPC: ${method}`);
    
    switch(method) {
      case 'tunnel.send':
        // –î–µ–æ–±—Ñ—É—Å—Ü–∏—Ä—É–µ–º –¥–∞–Ω–Ω—ã–µ
        const realData = JSON.parse(
          Buffer.from(params.data, 'base64').toString()
        );
        
        // –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º
        const result = await this.processTunnelData(realData);
        
        // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –æ—Ç–≤–µ—Ç
        res.json({
          jsonrpc: '2.0',
          result: {
            data: Buffer.from(JSON.stringify(result)).toString('base64'),
            timestamp: Date.now()
          },
          id
        });
        break;
        
      case 'tunnel.status':
        res.json({
          jsonrpc: '2.0',
          result: {
            connected_clients: this.tunnelServer ? this.tunnelServer.clients?.size || 0 : 0,
            active_tunnels: this.tunnelServer ? this.tunnelServer.tunnels?.size || 0 : 0,
            obfuscation: this.obfuscator.currentMethod,
            server_time: Date.now()
          },
          id
        });
        break;
        
      default:
        res.status(400).json({
          jsonrpc: '2.0',
          error: { code: -32601, message: 'Method not found' },
          id
        });
    }
  }
  
  async handleGraphQL(data, res) {
    console.log(`üîÑ GraphQL request`);
    
    // –ò–∑–≤–ª–µ–∫–∞–µ–º –¥–∞–Ω–Ω—ã–µ –∏–∑ GraphQL –æ–±–µ—Ä—Ç–∫–∏
    const payload = Buffer.from(data.variables.input.payload, 'base64').toString();
    const tunnelData = JSON.parse(payload);
    
    const result = await this.processTunnelData(tunnelData);
    
    res.json({
      data: {
        tunnelSend: {
          success: true,
          data: Buffer.from(JSON.stringify(result)).toString('base64')
        }
      }
    });
  }
  
  async handleDirectTunnel(data, res) {
    console.log(`üéØ Direct tunnel request: ${data.type || 'unknown'}`);
    
    const result = await this.processTunnelData(data);
    
    // –û–±—Ñ—É—Å—Ü–∏—Ä—É–µ–º –æ—Ç–≤–µ—Ç
    const obfuscated = this.obfuscator.obfuscate(
      JSON.stringify(result)
    );
    
    // –ú–∞—Å–∫–∏—Ä—É–µ–º –æ—Ç–≤–µ—Ç
    const masked = this.masker.autoMask(
      Buffer.from(JSON.stringify(obfuscated))
    );
    
    res.json(masked.data);
  }
  
  async handleJsonTunnel(req, res) {
    const data = req.body;
    
    // –û–±—Ä–∞–±–æ—Ç–∫–∞ JSON —Ç—É–Ω–Ω–µ–ª—è
    const result = await this.processTunnelData(data);
    
    res.json({
      frame_id: `frame_${Date.now()}`,
      type: 'DATA',
      payload: Buffer.from(JSON.stringify(result)).toString('base64'),
      obfuscation_method: this.obfuscator.currentMethod,
      timestamp: Date.now()
    });
  }
  
  async processTunnelData(data) {
    // –ë–∞–∑–æ–≤–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ —Ç—É–Ω–Ω–µ–ª—å–Ω—ã—Ö –¥–∞–Ω–Ω—ã—Ö
    return {
      processed: true,
      type: data.type || 'unknown',
      timestamp: Date.now(),
      server_time: Date.now(),
      obfuscation: this.obfuscator.currentMethod
    };
  }
  
  getRouter() {
    return this.router;
  }
}
