import { EventEmitter } from 'events';
import crypto from 'crypto';
import fetch from 'node-fetch';

// –ò–º–ø–æ—Ä—Ç protobuf (–¥–æ–ª–∂–µ–Ω –±—ã—Ç—å —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω –ª–æ–∫–∞–ª—å–Ω–æ)
import { TunnelFrame, HttpRequest, HttpResponse, FrameType } from '../proto/tunnel_grpc_web_pb.js';

class LaptopGrpcClient {
  constructor(config) {
    this.config = {
      serverUrl: config.serverUrl || 'http://localhost:3000',
      localAppUrl: config.localAppUrl || 'http://localhost:8000',
      reconnectInterval: config.reconnectInterval || 5000,
      ...config
    };
    
    this.clientId = null;
    this.tunnelId = null;
    this.stream = null;
    this.isConnected = false;
    this.reconnectTimer = null;
    this.eventEmitter = new EventEmitter();
    this.pendingRequests = new Map();
  }
  
  async connect() {
    try {
      console.log(`üîó Connecting to gRPC server: ${this.config.serverUrl}`);
      
      // –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è —á–µ—Ä–µ–∑ gRPC-Web
      const registration = {
        client_id: this.generateClientId(),
        client_type: 0, // LAPTOP
        capabilities: ['HTTP_PROXY', 'GRPC_STREAM'],
        local_app_url: this.config.localAppUrl
      };
      
      const response = await fetch(`${this.config.serverUrl}/grpc/tunnel.TunnelService/Register`, {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify(registration)
      });
      
      const result = await response.json();
      
      if (result.success && result.data) {
        this.clientId = result.data.client_id;
        this.tunnelId = result.data.tunnel_id;
        
        console.log(`‚úÖ Registered: ${this.clientId}`);
        console.log(`üîÑ Tunnel ID: ${this.tunnelId}`);
        
        // –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ —Å—Ç—Ä–∏–º—É
        await this.connectToStream();
        
        return true;
      }
      
      throw new Error('Registration failed');
      
    } catch (error) {
      console.error('‚ùå Connection error:', error);
      this.scheduleReconnect();
      throw error;
    }
  }
  
  async connectToStream() {
    // –ò—Å–ø–æ–ª—å–∑—É–µ–º Server-Sent Events –¥–ª—è —Å—Ç—Ä–∏–º–∞
    const streamUrl = `${this.config.serverUrl}/grpc/tunnel/stream?client_id=${this.clientId}`;
    
    console.log(`üì° Connecting to stream: ${streamUrl}`);
    
    try {
      const response = await fetch(streamUrl, {
        headers: { 'Accept': 'text/event-stream' }
      });
      
      if (!response.ok) {
        throw new Error(`Stream connection failed: ${response.status}`);
      }
      
      const reader = response.body.getReader();
      const decoder = new TextDecoder();
      
      this.stream = {
        reader,
        close: () => reader.cancel()
      };
      
      this.isConnected = true;
      
      // –ß—Ç–µ–Ω–∏–µ —Å—Ç—Ä–∏–º–∞
      this.readStream(reader, decoder);
      
      console.log('‚úÖ Stream connected');
      
    } catch (error) {
      console.error('‚ùå Stream connection error:', error);
      throw error;
    }
  }
  
  async readStream(reader, decoder) {
    try {
      while (true) {
        const { done, value } = await reader.read();
        
        if (done) {
          console.log('üîå Stream ended by server');
          this.handleDisconnection();
          break;
        }
        
        const chunk = decoder.decode(value);
        this.processStreamChunk(chunk);
      }
    } catch (error) {
      console.error('‚ùå Stream read error:', error);
      this.handleDisconnection();
    }
  }
  
  processStreamChunk(chunk) {
    // –û–±—Ä–∞–±–æ—Ç–∫–∞ Server-Sent Events
    const lines = chunk.split('\n');
    
    for (const line of lines) {
      if (line.startsWith('data: ')) {
        try {
          const data = JSON.parse(line.substring(6));
          this.handleIncomingFrame(data);
        } catch (error) {
          console.error('‚ùå Stream data parse error:', error);
        }
      }
    }
  }
  
  handleIncomingFrame(frameData) {
    try {
      const frame = new TunnelFrame(frameData);
      
      console.log(`üì® Frame received: ${FrameType[frame.type] || frame.type}`);
      
      switch(frame.type) {
        case FrameType.HTTP_REQUEST:
          this.handleHttpRequest(frame);
          break;
          
        case FrameType.PING:
          this.sendPong(frame.frame_id);
          break;
          
        case FrameType.DATA:
          console.log('üì¶ Data frame:', JSON.parse(frame.payload.toString()));
          break;
          
        default:
          console.warn(`‚ö†Ô∏è Unknown frame type: ${frame.type}`);
      }
      
    } catch (error) {
      console.error('‚ùå Frame handling error:', error);
    }
  }
  
  async handleHttpRequest(frame) {
    try {
      const httpRequest = new HttpRequest(JSON.parse(frame.payload.toString()));
      
      console.log(`üì§ HTTP Request: ${httpRequest.method} ${httpRequest.path}`);
      
      // –í—ã–ø–æ–ª–Ω—è–µ–º –∑–∞–ø—Ä–æ—Å –∫ –ª–æ–∫–∞–ª—å–Ω–æ–º—É –ø—Ä–∏–ª–æ–∂–µ–Ω–∏—é
      const response = await this.forwardToLocalApp(httpRequest);
      
      // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –æ—Ç–≤–µ—Ç –æ–±—Ä–∞—Ç–Ω–æ
      await this.sendHttpResponse(response);
      
    } catch (error) {
      console.error('‚ùå HTTP request handling error:', error);
      
      // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –æ—à–∏–±–∫—É
      const errorResponse = new HttpResponse({
        request_id: frame.metadata?.request_id,
        status: 502,
        headers: { 'content-type': 'application/json' },
        body: Buffer.from(JSON.stringify({
          error: 'Bad Gateway',
          message: error.message
        }))
      });
      
      await this.sendHttpResponse(errorResponse);
    }
  }
  
  async forwardToLocalApp(httpRequest) {
    const url = new URL(httpRequest.path, this.config.localAppUrl);
    
    // –î–æ–±–∞–≤–ª—è–µ–º query –ø–∞—Ä–∞–º–µ—Ç—Ä—ã
    if (httpRequest.query) {
      Object.entries(httpRequest.query).forEach(([key, value]) => {
        url.searchParams.append(key, value);
      });
    }
    
    const options = {
      method: httpRequest.method,
      headers: { ...httpRequest.headers }
    };
    
    // –£–¥–∞–ª—è–µ–º –ø—Ä–æ–±–ª–µ–º–Ω—ã–µ –∑–∞–≥–æ–ª–æ–≤–∫–∏
    delete options.headers.host;
    delete options.headers['content-length'];
    
    // –î–æ–±–∞–≤–ª—è–µ–º —Ç–µ–ª–æ
    if (httpRequest.body && httpRequest.body.length > 0) {
      options.body = httpRequest.body;
    }
    
    console.log(`üåê Forwarding to local app: ${url.toString()}`);
    
    const response = await fetch(url.toString(), options);
    const body = await response.buffer();
    const headers = {};
    
    response.headers.forEach((value, key) => {
      headers[key] = value;
    });
    
    return new HttpResponse({
      request_id: httpRequest.request_id,
      status: response.status,
      headers,
      body
    });
  }
  
  async sendHttpResponse(httpResponse) {
    const frame = new TunnelFrame({
      frame_id: `resp_${Date.now()}`,
      type: FrameType.HTTP_RESPONSE,
      payload: Buffer.from(JSON.stringify(httpResponse)),
      timestamp: Date.now(),
      metadata: {
        request_id: httpResponse.request_id
      }
    });
    
    // –í —Ä–µ–∞–ª—å–Ω–æ—Å—Ç–∏ –Ω—É–∂–Ω–æ –æ—Ç–ø—Ä–∞–≤–ª—è—Ç—å —á–µ—Ä–µ–∑ —Å—Ç—Ä–∏–º
    // –ó–¥–µ—Å—å —É–ø—Ä–æ—â–µ–Ω–Ω–æ —á–µ—Ä–µ–∑ REST API
    await fetch(`${this.config.serverUrl}/grpc/tunnel.TunnelService/HttpProxy`, {
      method: 'POST',
      headers: { 'Content-Type': 'application/json' },
      body: JSON.stringify({
        request_id: httpResponse.request_id,
        status: httpResponse.status,
        headers: httpResponse.headers,
        body: httpResponse.body.toString('base64')
      })
    });
    
    console.log(`üì• HTTP Response sent: ${httpResponse.status}`);
  }
  
  sendPong(frameId) {
    const frame = new TunnelFrame({
      frame_id: `pong_${Date.now()}`,
      type: FrameType.PONG,
      payload: Buffer.from(JSON.stringify({ original_frame: frameId })),
      timestamp: Date.now()
    });
    
    // –û—Ç–ø—Ä–∞–≤–∫–∞ pong (—á–µ—Ä–µ–∑ REST, —Ç–∞–∫ –∫–∞–∫ SSE –æ–¥–Ω–æ–Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–Ω–æ–µ)
    fetch(`${this.config.serverUrl}/grpc/tunnel.TunnelService/HttpProxy`, {
      method: 'POST',
      headers: { 'Content-Type': 'application/json' },
      body: JSON.stringify({
        type: 'pong',
        original_frame: frameId
      })
    }).catch(console.error);
  }
  
  generateClientId() {
    if (!this.clientId) {
      const os = require('os');
      this.clientId = `laptop_${os.hostname()}_${Date.now()}_${crypto.randomBytes(4).toString('hex')}`;
    }
    return this.clientId;
  }
  
  handleDisconnection() {
    this.isConnected = false;
    console.log('üîå Disconnected from server');
    
    if (this.config.reconnect) {
      this.scheduleReconnect();
    }
  }
  
  scheduleReconnect() {
    if (this.reconnectTimer) {
      clearTimeout(this.reconnectTimer);
    }
    
    const delay = this.config.reconnectInterval;
    console.log(`üîÅ Reconnecting in ${delay}ms...`);
    
    this.reconnectTimer = setTimeout(async () => {
      try {
        await this.connect();
      } catch (error) {
        console.error('‚ùå Reconnection failed:', error);
        this.scheduleReconnect();
      }
    }, delay);
  }
  
  disconnect() {
    this.isConnected = false;
    
    if (this.reconnectTimer) {
      clearTimeout(this.reconnectTimer);
    }
    
    if (this.stream) {
      this.stream.close();
      this.stream = null;
    }
    
    console.log('üëã Tunnel client disconnected');
  }
}

export default LaptopGrpcClient;
